# obmc-yadro-ipmi-oem

./: .gitignore  README.md  meson.build
include/: host_config_cmd.hpp  inventory_cmd.hpp  oem_cmd.hpp
src/: host_config_cmd.cpp  inventory_cmd.cpp  oem_cmd.cpp
